{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 21,
  "lineage": "12175ced-232d-a01b-5d9c-0873813c73b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:459635311638:internet-gateway/igw-0e95f1cf263448486",
            "id": "igw-0e95f1cf263448486",
            "owner_id": "459635311638",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0ac56eb38beb7009b"
          },
          "dependencies": [
            "aws_vpc.dev-myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e95f1cf263448486",
            "id": "r-rtb-00a9adfada2ef0b041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00a9adfada2ef0b04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-route"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:459635311638:route-table/rtb-00a9adfada2ef0b04",
            "id": "rtb-00a9adfada2ef0b04",
            "owner_id": "459635311638",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-public-route"
            },
            "tags_all": {
              "Name": "terraform-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac56eb38beb7009b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:459635311638:subnet/subnet-0dd3d5d1f5c0455fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0dd3d5d1f5c0455fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459635311638",
            "tags": {
              "Name": "tf-private"
            },
            "tags_all": {
              "Name": "tf-private"
            },
            "vpc_id": "vpc-0ac56eb38beb7009b"
          },
          "dependencies": [
            "aws_vpc.dev-myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:459635311638:subnet/subnet-01ee9045dfca93173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-01ee9045dfca93173",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459635311638",
            "tags": {
              "Name": "tf-public"
            },
            "tags_all": {
              "Name": "tf-public"
            },
            "vpc_id": "vpc-0ac56eb38beb7009b"
          },
          "dependencies": [
            "aws_vpc.dev-myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:459635311638:vpc/vpc-0ac56eb38beb7009b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0830954cf02c46379",
            "default_route_table_id": "rtb-0cd55b133e6b39a09",
            "default_security_group_id": "sg-08cb32e2fb20ad914",
            "dhcp_options_id": "dopt-e603209e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ac56eb38beb7009b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd55b133e6b39a09",
            "owner_id": "459635311638",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}